coverage_output.txt
[2m2026-01-01T20:40:18.862950Z[0m [32m INFO[0m [2mcargo_tarpaulin::config[0m[2m:[0m Creating config
[2m2026-01-01T20:40:19.047170Z[0m [32m INFO[0m [2mcargo_tarpaulin[0m[2m:[0m Running Tarpaulin
[2m2026-01-01T20:40:19.047182Z[0m [32m INFO[0m [2mcargo_tarpaulin[0m[2m:[0m Building project
   Compiling usg-est-client v0.1.0 (/Users/johnwillman/Documents/GitHub/usg-est-client)
error: Broken pipe (os error 32)
warning: build failed, waiting for other jobs to finish...
error: could not compile `usg-est-client` (test "integration_tests") due to 28 previous errors; 1 warning emitted
[2m2026-01-01T20:40:21.314307Z[0m [31mERROR[0m [2mcargo_tarpaulin[0m[2m:[0m Failed to compile tests!
error[E0432]: unresolved import `usg_est_client::BootstrapClient`
 --> tests/integration/tls/bootstrap_test.rs:3:5
  |
3 | use usg_est_client::BootstrapClient;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `BootstrapClient` in the root
  |
help: a similar name exists in the module
  |
3 - use usg_est_client::BootstrapClient;
3 + use usg_est_client::BootstrapConfig;
  |
help: consider importing this struct instead
  |
3 | use usg_est_client::bootstrap::BootstrapClient;
  |                     +++++++++++


Error: "Failed to compile tests!\nerror[E0432]: unresolved import `usg_est_client::BootstrapClient`\n --> tests/integration/tls/bootstrap_test.rs:3:5\n  |\n3 | use usg_est_client::BootstrapClient;\n  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `BootstrapClient` in the root\n  |\nhelp: a similar name exists in the module\n  |\n3 - use usg_est_client::BootstrapClient;\n3 + use usg_est_client::BootstrapConfig;\n  |\nhelp: consider importing this struct instead\n  |\n3 | use usg_est_client::bootstrap::BootstrapClient;\n  |                     +++++++++++\n\n"
